kubernetes/ingress/nginx-iot-device-manager.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-iot-device-manager
spec:
  controller: k8s.io/ingress-nginx-iot-device-manager
